added terms of use
Signed-off-by: Kai Kreuzer <kai@openhab.org>

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: myopenHAB
 email: info@openhabfoundation.org
 description: 
 baseurl: ""
-url: "http://myopenhab.org"
+url: "http://www.myopenhab.org"
 twitter_username: openhabfoundation
 github_username:  openhabfoundation
 
